[package]
name = "iodine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "iodine-init"
path = "src/bin/iodine-init.rs"

[[bin]]
name = "iodine-service"
path = "src/bin/iodine-service.rs"

[dependencies]
nix = "*"
nc = "*"
signal-hook = "*"
toml = "*"
serde = { version = "*", features = ["derive"] }
crossbeam = "*"
bincode = { version = "2.0.0-rc.1", features = ["serde"] }